@@ -18,8 +18,10 @@
 // with this library; see the file COPYING3.  If not see
 // <http://www.gnu.org/licenses/>.
 
+// NB: Don't include any other headers in this file.
+// LWG 2212 requires <utility> to define tuple_size<cv T> and
+// tuple_element<cv T> specializations.
 #include <utility>
-#include <type_traits>
 
 typedef std::pair<int, long> test_type;
 
@@ -32,6 +34,7 @@ static_assert( std::tuple_size<const volatile test_type>::value == 2,
 template<std::size_t N, typename T>
   using Tuple_elt = typename std::tuple_element<N, T>::type;
 
+// This relies on the fact that <utility> includes <type_traits>:
 using std::is_same;
 
 static_assert( is_same<Tuple_elt<0, test_type>, test_type::first_type>::value,
